# TerraPhy

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: classical_physics.json  constants.rs  load_json.rs  main.rs  setup.rs
