[package]
name = "terra_phy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.131.0"
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
lazy_static = "1.4.0"
